rimozione parse nei playerstate, command creati nel client attraverdo un interprete, serializzazione in gson deserializzaione in jackson