@@ -1,6 +1,8 @@
 package org.example.galaxy_trucker.Controller.ClientServer.RMI;
 
+import org.example.galaxy_trucker.Commands.Command;
 import org.example.galaxy_trucker.Controller.ClientServer.Settings;
+import org.example.galaxy_trucker.Controller.GameHandler;
 import org.example.galaxy_trucker.Model.Game;
 import org.example.galaxy_trucker.Model.GameLists;
 import org.example.galaxy_trucker.Model.Player;
@@ -15,16 +17,16 @@ import java.util.ArrayList;
 public class ServerActions extends UnicastRemoteObject implements ServerInterface {
 
 
-    //gay per non avere errori
 
     Player CurrentPlayer;
 
-    GameLists gh;
+    GameHandler gh;
 
     ArrayList<ClientInterface> clients;
 
     public ServerActions() throws RemoteException {
-        gh = new GameLists();
+
+        gh = new GameHandler();
         clients = new ArrayList<>();
     }
 
@@ -50,8 +52,10 @@ public class ServerActions extends UnicastRemoteObject implements ServerInterfac
 
 
     @Override
-    public void command(String cmd) throws RemoteException{
+    public void command(Command cmd) throws RemoteException{
+        gh.receive(cmd);
         System.out.println(cmd);
+
     }
 
 
@@ -63,13 +67,13 @@ public class ServerActions extends UnicastRemoteObject implements ServerInterfac
             throw new IllegalArgumentException("Client not found");
         }
 
-        Game joining = gh.getGames().stream().filter(g -> g.getID().equals(GameName)).findFirst().orElseThrow();
+        Game joining = gh.getGameList().getGames().stream().filter(g -> g.getID().equals(GameName)).findFirst().orElseThrow();
 
 
         joiner.setPlayerId(playerName);
 
         try{
-            gh.JoinGame(joining, joiner.getPlayer());
+            gh.getGameList().JoinGame(joining, joiner.getPlayer());
         }
         catch (Exception e){
             e.printStackTrace();
@@ -83,7 +87,7 @@ public class ServerActions extends UnicastRemoteObject implements ServerInterfac
     @Override
     public void CreateGame(ClientInterface joiner, String playerName, String GameName, int lv) throws RemoteException{
 
-        for(Game  g : gh.getGames()){
+        for(Game  g : gh.getGameList().getGames()){
             if(g.getID().equals(GameName)){
                 throw new RuntimeException("Game with this ID already exists");
             }
@@ -92,7 +96,7 @@ public class ServerActions extends UnicastRemoteObject implements ServerInterfac
         joiner.setPlayerId(playerName);
 
         try {
-            Game g = gh.CreateNewGame(GameName, joiner.getPlayer(), lv);
+            Game g = gh.getGameList().CreateNewGame(GameName, joiner.getPlayer(), lv);
             joiner.setGame(g);
         }
         catch (Exception e){
@@ -103,7 +107,6 @@ public class ServerActions extends UnicastRemoteObject implements ServerInterfac
 
 
 
-    //--add-opens org.example.galaxy_trucker/org.example.galaxy_trucker.Controller.RMI=java.rmi
 
     public static void main(String[] args){
         try {
